# simpleneuralnet

./: CMakeLists.txt  affinelayer.cpp  affinelayer.h  gradientcheck.h  layer.h  main.cpp  net.h  tensor.h
tests/: CMakeLists.txt  affinelayer_unittest.cpp  gtest_main.cpp  sample_unittest.cpp
